--- a/EssentialFeediOS/Feed UI/Views/Feed.storyboard
+++ b/EssentialFeediOS/Feed UI/Views/Feed.storyboard
@@ -125,6 +125,7 @@ Location</string>
                         <connections>
                             <outlet property="dataSource" destination="eSl-8o-cvH" id="wTo-G2-ecJ"/>
                             <outlet property="delegate" destination="eSl-8o-cvH" id="cYh-Ge-TFd"/>
+                            <outlet property="prefetchDataSource" destination="eSl-8o-cvH" id="HuC-v2-0RG"/>
                         </connections>
                     </tableView>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="j0R-XQ-7Uh">
