--- a/EssentialFeediOS/Image Comments UI/Views/ImageComments.storyboard
+++ b/EssentialFeediOS/Image Comments UI/Views/ImageComments.storyboard
@@ -15,38 +15,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="xJU-Uw-e6O" customClass="ErrorView" customModule="EssentialFeediOS" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="34"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMV-mY-q0F">
-                                    <rect key="frame" x="0.0" y="8" width="393" height="18"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" red="0.99951404330000004" green="0.41759261489999999" blue="0.4154433012" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <gestureRecognizers/>
-                            <constraints>
-                                <constraint firstItem="JMV-mY-q0F" firstAttribute="leading" secondItem="xJU-Uw-e6O" secondAttribute="leading" id="NeZ-Xk-m5B"/>
-                                <constraint firstAttribute="bottom" secondItem="JMV-mY-q0F" secondAttribute="bottom" constant="8" id="ZBa-qo-IVw"/>
-                                <constraint firstAttribute="trailing" secondItem="JMV-mY-q0F" secondAttribute="trailing" id="q0u-oP-3sp"/>
-                                <constraint firstItem="JMV-mY-q0F" firstAttribute="top" secondItem="xJU-Uw-e6O" secondAttribute="top" constant="8" id="ySw-7i-Hgl"/>
-                            </constraints>
-                            <connections>
-                                <outlet property="label" destination="JMV-mY-q0F" id="kgA-of-Ede"/>
-                                <outletCollection property="gestureRecognizers" destination="xWD-5a-WGi" appends="YES" id="HbX-pG-wzN"/>
-                            </connections>
-                        </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="gwY-vt-Sxf">
-                            <rect key="frame" x="0.0" y="238" width="393" height="16"/>
+                            <rect key="frame" x="0.0" y="204" width="393" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCommentCell" rowHeight="126" id="jmL-Ku-sl8" customClass="ImageCommentCell" customModule="EssentialFeediOS" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="84" width="393" height="126"/>
+                                <rect key="frame" x="0.0" y="50" width="393" height="126"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jmL-Ku-sl8" id="xlf-lM-JKM">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="126"/>
@@ -112,16 +88,9 @@
                             <action selector="refresh" destination="eSl-8o-cvH" eventType="valueChanged" id="oHG-au-y8a"/>
                         </connections>
                     </refreshControl>
-                    <connections>
-                        <outlet property="errorView" destination="xJU-Uw-e6O" id="6C1-a5-NXv"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oSa-Uj-tmb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="xWD-5a-WGi">
-                    <connections>
-                        <action selector="hideMessageAnimated" destination="xJU-Uw-e6O" id="I8y-u1-Cjd"/>
-                    </connections>
-                </tapGestureRecognizer>
+                <tapGestureRecognizer id="xWD-5a-WGi"/>
             </objects>
             <point key="canvasLocation" x="3116.7938931297708" y="335.91549295774649"/>
         </scene>
